--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-MONGO_URI=mongodb+srv://LVien:<password>@practicum.twrhx3o.mongodb.net/databasename?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://<username>:<password>@xxxxxx.xxxxx.mongodb.net/databasename?retryWrites=true&w=majority
 ("url from mongodb connection")
 
-JWT_SECRET=NcRfUjXn2r5u8x/A%D*G-KaPdSgVkYp3
+JWT_SECRET=SECRET_VALUE
 ("signature or a code that is used to identify the authenticity of the token,if you want to generate a secure key you can go to 
 https://allkeysgenerator.com/, choose encryption key then 256bit as security level, the copy and paste the key here")
 
