Created seed data functionality

--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
     "description": "Back-End Repo for Team 1 of Baboon/Bald Eagle Practicum",
     "main": "app.js",
     "scripts": {
-        "start": "nodemon src/server.js"
+        "start": "nodemon src/server.js",
+        "seed-database": "node seeds/seed-database.js",
+        "clear-database": "node seeds/clear-database.js",
+        "reset-database": "npm run clear-database && npm run seed-database"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "colors": "^1.4.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "eslint": "^8.36.0",
