--- a/package.json
+++ b/package.json
@@ -9,19 +9,26 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/jest": "^29.5.0",
+        "@types/node": "^18.15.8",
+        "@types/react": "^18.0.29",
+        "@types/react-dom": "^18.0.11",
         "bcryptjs": "^2.4.3",
+        "collect.js": "^4.34.3",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "eslint": "^8.36.0",
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
         "express-favicon": "^2.0.4",
+        "geodist": "^0.2.1",
         "http-status-codes": "^2.2.0",
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.0.1",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
-        "prettier": "^2.8.4"
+        "prettier": "^2.8.4",
+        "typescript": "^5.0.2"
     },
     "devDependencies": {
         "nodemon": "^2.0.21"
