--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
         "mongoose": "^7.0.1",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
-        "prettier": "^2.8.4",
-        "typescript": "^5.0.2"
+        "prettier": "^2.8.4"
     },
     "devDependencies": {
         "nodemon": "^2.0.21"
