--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "mongoose": "^7.0.1",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
+        "node-fetch": "^2.6.9",
         "prettier": "^2.8.4"
     },
     "devDependencies": {
