Updated the address routes and Readme.md file

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ https://allkeysgenerator.com/, choose encryption key then 256bit as security lev
 JWT_LIFETIME=24h
 ("the validity of the token, means after which duration the server will not consider the token sent by the client,
 I put 24hours as the best practice for us")
+
+API_KEY="YOUR_API_KEY"
+("identify the calling project — the application or site — making the call to an API")
