--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
         "express-favicon": "^2.0.4",
+        "form-data": "^4.0.0",
+        "formdata-node": "^5.0.0",
         "geodist": "^0.2.1",
         "http-status-codes": "^2.2.0",
         "jsonwebtoken": "^9.0.0",
