--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
         "multer": "^1.4.5-lts.1",
         "node-fetch": "^2.6.9",
         "prettier": "^2.8.4",
-        "socket.io": "^4.6.1"
+        "socket.io": "^4.6.1",
+        "swagger-ui-express": "^4.6.2",
+        "yamljs": "^0.3.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.21"
