--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ GEOAPIFY_API_KEY=YOUR_GEOAPIFY_API_KEY
 ("the Geoapify Key will be used to identify the calling project — the application or site — making the call to an API
 that provided by Geoapify.com, you can get this API key by creating a project in the geoapify website 
 as per instructions in the README.md file")
+
+IS_LOCAL=TRUE
+("set value is true for baseURL usage")
